# KinetiMesh

./: .gitignore  AGENTS.md  CHANGELOG.md  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: INTERNAL_USAGE.md  __init__.py  mcp_wrapper.py
src/db/: __init__.py  store.py
src/ingestor/: __init__.py  scanner.py
src/parser/: __init__.py  chunker.py
src/server/: __init__.py  mcp_server.py  pipeline.py
tests/: __init__.py  bench_speed.py  conftest.py  test_e2e.py  test_ingestor.py  test_integration.py  test_internal_wrapper.py  test_parser.py  test_pipeline.py  test_real_repo.py  test_store.py  test_stress.py
